deploy/k8s/main/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: fd-visiology-report-builder-main
  name: fd-visiology-report-builder-main-service
  namespace: front
spec:
  clusterIP: 10.43.170.247
  clusterIPs:
  - 10.43.170.247
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app: fd-visiology-report-builder-main
  sessionAffinity: None
  type: ClusterIP
